added forecast page and onclick function

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </div>
         <div class="header-left">
             <span class="material-icons-outlined">account_circle</span>
-            <span class="material-icons-outlined">notifications</span>        </div>
+            <span class="material-icons-outlined">notifications</span>    
+        </div>
     </header>
     <!--Header-->
 
@@ -39,8 +40,7 @@
         </div>
         <ul class="sidebar-list">
             <li class="sidebar-list-item"><span class="material-icons-outlined">space_dashboard</span>Dashboard</li>
-            <li class="sidebar-list-item"><span class="material-icons-outlined">insights</span>Forecast</li>
-            <li class="sidebar-list-item"><span class="material-icons-outlined">assessment</span>Previous Reports</li>
+            <li class="sidebar-list-item" onclick="switchPage('fileupload.html')"><span class="material-icons-outlined">insights</span>Forecast</li>
             <li class="sidebar-list-item"><span class="material-icons-outlined">settings</span>System Settings</li>
             <li class="sidebar-list-item"><span class="material-icons-outlined">manage_accounts</span>Account Settings</li>
         </ul>
