--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
         <ul class="sidebar-list">
             <li class="sidebar-list-item"><span class="material-icons-outlined">space_dashboard</span>Dashboard</li>
             <li class="sidebar-list-item" onclick="switchPage('fileupload.html')"><span class="material-icons-outlined">insights</span>Forecast</li>
-            <li class="sidebar-list-item"><span class="material-icons-outlined">settings</span>System Settings</li>
-            <li class="sidebar-list-item"><span class="material-icons-outlined">manage_accounts</span>Account Settings</li>
         </ul>
     </aside>
     <!--NavBar-->
@@ -83,14 +81,14 @@
         </div>
 
         <div class="charts">
-            <div class="charts-card">
-                <h2 class="charts-title"> Monthly Average Temperature</h2>
-                <div id="line-chart"></div>
+            <div class="chart-card">
+                <div class="charts-title">Monthly Average Temperature</div>
             </div>
-
             <div class="charts-card">
-                <h2 class="charts-title"> Monthly Average Temperature</h2>
-                <div class="line-chart2"></div>
+                <h2 class="charts-title"> Predict Generation Charge for Specific Month</h2>
+            </div>
+            <div class="chart-card">
+                <div class="charts-title">Monthly Generation Charge</div>
             </div>
         </div>
     </main>
